# Mouse-application

./: README.md
mouse_app/: App.qml  AudioControl.qml  BatteryIcon.qml  BluetoothAlarmDialog.qml  BottomLine.qml  CMakeLists.txt  CMakeLists.txt.user.ef64451  Connect.qml  EyeClick.qml  EyeClickButton.qml  ForgotPasswordPage.qml  FrontendButton.qml  GamePage.qml  LoginPage.qml  Main.qml  Measure.qml  PageView.qml  PlaybackControl.qml  Profile.qml  RegistrationPage.qml  Stats.qml  StatsLabel.qml  TitleBar.qml  Update.qml  UserGuide.qml  devicehandler.cpp  devicehandler.h  fonts.qrc  heartrate-game.pro  heartrate-global.h  main.cpp  mousedefaultsettings.cpp  mousedefaultsettings.h  mousesettings.cpp  mousesettings.h  pageviewbackend.cpp  pageviewbackend.h  test_file.qml
mouse_app/HeartRateGame/: qmldir
mouse_app/HeartRateGame/eye_detector/: eye_detector.py  opencv_env.yaml
